# mtgv2

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt  workspace.yml
.github/workflows/: lint.yml  scryfall_test_run.yml
src/: scryfall.py
src/defs/: assets.py  repository.py
src/mtg_pipeline/: scryfall.py
src/mtg_pipeline/internal_classes/: db_client.py
src/mtgv2/: commander_spellbook.py  dbt_resource.py  definitions.py  scryfall.py
src/mtgv2/defs/: assets.py  jobs.py
src/mtgv2/defs/dbt_assets/: _schema_standards.md  dbt_project.yml
src/mtgv2/defs/dbt_assets/models/marts/: mart_card_catalog.sql  mart_card_combo_lookup.sql  mart_combo_analysis.sql  mart_format_legalities.sql  mart_price_trends.sql
src/mtgv2/defs/dbt_assets/models/staging/: _schema_standards.md  _sources.yml  clean_cards.sql  clean_cs_cards.sql  clean_sf_cards.sql  stg_cs_cards.sql  stg_cs_features.sql  stg_cs_templates.sql  stg_cs_variants.sql  stg_scryfall_cards.sql
src/mtgv2/internal_classes/: api_base.py  db_client.py
test/: scryfall_job_test.py
